# django-postgresql-docker

./: .gitignore  docker-compose.yml  env_sample  pyproject.toml
src/: manage.py
src/attempt_dpd/: asgi.py  settings.py  urls.py  wsgi.py
